--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "antd": "^3.19.3",
     "chart.js": "2.7.3",
     "classnames": "2.2.6",
     "moment": "2.24.0",
