--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "nouislider": "13.1.1",
     "react": "16.8.4",
     "react-chartjs-2": "2.7.4",
+    "react-circular-progressbar": "^2.0.1",
     "react-copy-to-clipboard": "5.0.1",
     "react-datetime": "2.16.3",
     "react-dom": "16.8.4",
