--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "moment": "2.24.0",
     "node-sass": "4.11.0",
     "nouislider": "13.1.1",
+    "ol": "^5.3.3",
     "react": "16.8.4",
     "react-chartjs-2": "2.7.4",
     "react-circular-progressbar": "^2.0.1",
@@ -72,6 +73,7 @@
     "@types/googlemaps": "3.30.18",
     "@types/markerclustererplus": "2.1.33",
     "@types/react": "16.8.7",
+    "react-openlayers": "^0.2.1",
     "typescript": "3.3.3333"
   }
 }
